[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyRawTools"
version = "0.1.5"
authors = [
  { name="Estrella Pan", email="estrellaxd05@gmail.com" },
]
description = "pyRawTools is a Python package for loading Thermo MS data."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/EstrellaXD/pyRawTools"
"Bug Tracker" = "https://github.com/EstrellaXD/pyRawTools/issues"